--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ Appium-Python-Client = "^2.6.1"
 selene = "^2.0.0b17"
 allure-pytest = "^2.13.0"
 pytest = "^7.2.2"
-dynaconf = "^3.1.12"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
